--- a/pages/about.html
+++ b/pages/about.html
@@ -84,6 +84,11 @@
 <td align="center">辅助</td>
 </tr>
 <tr>
+<td align="center">130520982</td>
+<td><img alt="" src="https://steamcdn-a.akamaihd.net/steamcommunity/public/images/avatars/88/880bdebb786567cdb002f7f4d5e60b5b1f1a3298.jpg" />北冰洋巨鳄</td>
+<td align="center">SOLO 辅助</td>
+</tr>
+<tr>
 <td align="center">136278269</td>
 <td><img alt="" src="https://steamcdn-a.akamaihd.net/steamcommunity/public/images/avatars/fc/fca1c0a787cef0ff8792249afb1cca1985b80c7d.jpg" />滨海小龙虾</td>
 <td align="center">SOLO 辅助</td>
