--- a/recent-matches.html
+++ b/recent-matches.html
@@ -42,6 +42,8 @@
         </ul>
       </nav>
       <ul class="social">
+        <li><a class="sc-github" href="https://github.com/Wenice/wenice.github.io" target="_blank"><i class="fa fa-github"></i></a></li>
+        <li><a class="sc-twitter" href="https://twitter.com/Leohc92" target="_blank"><i class="fa fa-twitter"></i></a></li>
       </ul>
     </div>
   </aside>
